<resources>
    <string name="app_name">MyFirAppInAir</string>
    <string name="help">Help Screen</string>
    <string name="setting">Setting Screen</string>
    <string name="game">Game Screen</string>
    <string name="scores">Scores Screen</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_quiz_splash">QuizSplashActivity</string>
    <string name="title_activity_quiz_menu_actvity">QuizMenuActvity</string>
    <string name="title_activity_quiz_help">QuizHelpActivity</string>
    <string name="title_activity_quiz_scores">QuizScoresActivity</string>
    <string name="title_activity_quiz_settings">QuizSettingsActivity</string>
    <string name="title_activity_quiz_game">QuizGameActivity</string>

    <string name="app_logo_top">Been There</string>
    <string name="app_version_info">Version 1.0.0\nCopyright 2011 Mamlambo\n
        All Right Reserved.</string>
    <string name="app_logo_bottom">Done That!</string>

    <string name="menu">MAIN MENU</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_play">Play Game</string>
    <string name="menu_item_scores">View Scores</string>
    <string name="menu_item_help">Help</string>

    <string name="all_scores">"All Scores"</string>
    <string name="friends_scores">"Scores of Friends"</string>
    <string name="no_scores">"NO scores to show"</string>
    <string name="username">"Username"</string>
    <string name="rank">"Rank"</string>
    <string name="wait_msg">"Retrieving Scores"</string>
    <string name="wait_title">"Loading..."</string>

    <string name="nick_name">Nickname:</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="password_button">Input Password</string>
    <string name="birth_data">Birth Data:</string>
    <string name="birth_data_button">Set Birth Data</string>
    <string name="gender">Gender:</string>

    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_prefer_no_say">Prefer Not To Say.</string>

    <string name="set_password_ok">Got Password</string>
    <string name="set_password_no">No Password</string>
    <string name="settings_pwd_equal">Passwords match</string>
    <string name="settings_pwd_not_equal">Passwords do not match, please try again.</string>

    <string name="set_email">Set Email</string>
    <string name="set_nickname">Set Nickname</string>
    <string name="set_birth">Set BirthDate</string>
    <string name="set_password">Set Password</string>

    <string name="game_button_yes">YES</string>
    <string name="game_button_no">NO</string>

    <string name="no_questions">No more questions available. Try back later.</string>
</resources>
