<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="magi.myfirappinair.QuizSplashActivity"
    android:id="@+id/frame_outside">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/material_blue_grey_950"
        android:orientation="vertical"
        android:id="@+id/frame_inside">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_logo_top"
            android:textColor="@color/logo_color"
            android:id="@+id/TextViewTopTitle"
            android:gravity="top|center"
            android:layout_gravity="center"
            android:textSize="@dimen/logo_size">
        </TextView>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/TableLayout01"
            android:stretchColumns="*">

            <TableRow
                android:id="@+id/TableRow01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                >
                <ImageView
                    android:id="@+id/ImageView2_Left"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/image01">
                </ImageView>

                <ImageView
                    android:id="@+id/ImageView2_Right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@mipmap/image02">

                </ImageView>

            </TableRow>

            <TableRow
                android:id="@+id/TableRow02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal">
                <ImageView
                    android:id="@+id/ImageView3_Left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:src="@mipmap/image03">

                </ImageView>
                <ImageView
                    android:id="@+id/ImageView3_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:src="@mipmap/image04">
                </ImageView>

            </TableRow>

        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/TextViewBottomTitle"
            android:text="@string/app_logo_bottom"
            android:textColor="@color/logo_color"
            android:gravity="center"
            android:textSize="@dimen/logo_size">

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/TextViewBottomVersion"
            android:text="@string/app_version_info"
            android:textColor="@color/version_color"
            android:background="@color/version_bkgrd"
            android:lineSpacingExtra="@dimen/version_spacing"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center"
            android:textSize="@dimen/version_size"
            >

        </TextView>
    </LinearLayout>


</RelativeLayout>
